# kagome-cxx

./: BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DICTIONARY.md  GITHUB_ACTIONS.md  LICENSE  README.md  RSPAMD_INTEGRATION.md
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
debian/: changelog  control  copyright  kagome-dict-ipa.install  kagome-rspamd-tokenizer.install  kagome-tools.install  libkagome-cpp-dev.install  libkagome-cpp1.install  rules
include/kagome/c_api/: kagome_c_api.h
include/kagome/common/: format.hpp
include/kagome/dict/: binary_loader.hpp  dict.hpp
include/kagome/tokenizer/: token.hpp  tokenizer.hpp
include/kagome/tokenizer/lattice/: lattice.hpp  node.hpp
src/: main.cpp
src/c_api/: kagome_c_api.cpp
src/dict/: binary_loader.cpp  dict.cpp
src/rspamd_plugin/: kagome_tokenizer.cpp
src/tokenizer/: token.cpp  tokenizer.cpp
src/tokenizer/lattice/: lattice.cpp  node.cpp
tests/: test_main.cpp  tokenizer_test.cpp
